# obst-avoid-dmp-pi2

./: README.md
3P-3D/train0/: train_0_0.npz  train_0_3.npz  train_0_4.npz
3P-3D/train1/: train_1_0.npz  train_1_1.npz  train_1_2.npz  train_1_3.npz  train_1_4.npz
3P-3D/train2/: train_2_0.npz  train_2_1.npz  train_2_2.npz  train_2_3.npz
3P-3D/train3/: train_3_0.npz  train_3_1.npz
3P-3D/train4/: train_4_3.npz
3P-3D/train5/: train_5_1.npz  train_5_2.npz  train_5_3.npz
code/robot_experiments/: readme.md
code/robot_experiments/dmp_ur/low_level_control/: CMakeLists.txt  package.xml
code/robot_experiments/dmp_ur/low_level_control/config/: ur_controllers.yaml
code/robot_experiments/dmp_ur/low_level_control/launch/: box_world.launch.py  main_avoid_wall_3p.launch.py
code/robot_experiments/dmp_ur/low_level_control/src/: cartesian_position_controller.cpp  madar_trajectory_controller.cpp
code/robot_experiments/dmp_ur/low_level_control/urdf/: ur.urdf.xacro
code/robot_experiments/dmp_ur/low_level_control/urdf/objects/: bleach_cleanser.sdf  plastic_cup.sdf  tomato_soup_can.sdf
code/robot_experiments/dmp_ur/low_level_control/worlds/: box_plugin.world  empty_plugin.world  insert_plugin.world  wall_plugin.world
code/robot_experiments/ur5e_moveit_commander/: CMakeLists.txt  package.xml
code/robot_experiments/ur5e_moveit_commander/src/: ur5e_trajectory_node.cpp
code/robot_experiments/ur_forward_kinematics/ur_fk/: CMakeLists.txt  package.xml
code/robot_experiments/ur_forward_kinematics/ur_fk/msg/: JointPoses.msg
code/robot_experiments/ur_forward_kinematics/ur_fk/src/: ur5e.cpp
code/training/: obst_avoid_box_acc_data_gen.py  obst_avoid_box_acc_nn_testing.py  obst_avoid_box_acc_nn_training.py  pi2.py  poly_traj_3.txt  readme.md
datasets_and_models/: 1P-2D_model.pth  2P-2D_model.pth  3P-3D_model.pth  readme.md
datasets_and_models/1P-1D/train0/: train_0.npz
datasets_and_models/2P-2D/train0/: train_0.npz
datasets_and_models/2P-2D/train1/: train_1.npz
datasets_and_models/2P-2D/train2/: train_2.npz
datasets_and_models/2P-2D/train3/: train_3.npz
datasets_and_models/2P-2D/train4/: train_4.npz
datasets_and_models/3P-2D/train0/: train_0.npz
datasets_and_models/3P-2D/train1/: train_1.npz
datasets_and_models/3P-2D/train10/: train_10.npz
datasets_and_models/3P-2D/train11/: train_11.npz
datasets_and_models/3P-2D/train12/: train_12.npz
datasets_and_models/3P-2D/train13/: train_13.npz
datasets_and_models/3P-2D/train14/: train_14.npz
datasets_and_models/3P-2D/train15/: train_15.npz
datasets_and_models/3P-2D/train16/: train_16.npz
datasets_and_models/3P-2D/train17/: train_17.npz
datasets_and_models/3P-2D/train18/: train_18.npz
datasets_and_models/3P-2D/train19/: train_19.npz
datasets_and_models/3P-2D/train2/: train_2.npz
datasets_and_models/3P-2D/train20/: train_20.npz
datasets_and_models/3P-2D/train21/: train_21.npz
datasets_and_models/3P-2D/train22/: train_22.npz
datasets_and_models/3P-2D/train23/: train_23.npz
datasets_and_models/3P-2D/train24/: train_24.npz
datasets_and_models/3P-2D/train25/: train_25.npz
datasets_and_models/3P-2D/train26/: train_26.npz
datasets_and_models/3P-2D/train27/: train_27.npz
datasets_and_models/3P-2D/train28/: train_28.npz
datasets_and_models/3P-2D/train29/: train_29.npz
datasets_and_models/3P-2D/train3/: train_3.npz
datasets_and_models/3P-2D/train30/: train_30.npz
datasets_and_models/3P-2D/train31/: train_31.npz
datasets_and_models/3P-2D/train32/: train_32.npz
datasets_and_models/3P-2D/train33/: train_33.npz
datasets_and_models/3P-2D/train34/: train_34.npz
datasets_and_models/3P-2D/train35/: train_35.npz
datasets_and_models/3P-2D/train36/: train_36.npz
datasets_and_models/3P-2D/train37/: train_37.npz
datasets_and_models/3P-2D/train38/: train_38.npz
datasets_and_models/3P-2D/train39/: train_39.npz
datasets_and_models/3P-2D/train4/: train_4.npz
datasets_and_models/3P-2D/train40/: train_40.npz
datasets_and_models/3P-2D/train41/: train_41.npz
(+74 files in other folders)
